--- a/WebContent/zul/indices.zul
+++ b/WebContent/zul/indices.zul
@@ -19,9 +19,11 @@
 	<grid model="@{win.indices}">
 		<columns>
 			<column width="120px" label="name" />
-			<column width="40px" label="sc" tooltiptext="searchCache" />
-			<column width="40px" label="fc" tooltiptext="filterCache" />
-			<column width="40px" label="dc" tooltiptext="documentCache" />
+			<column width="40px" label="search"
+				tooltiptext="searchCache" />
+			<column width="40px" label="filter"
+				tooltiptext="filterCache" />
+			<column width="40px" label="field" tooltiptext="fieldCache" />
 			<column label="path" />
 			<column width="120px" label="remoteUrl" />
 			<column width="100px" label="keyField" />
@@ -32,9 +34,9 @@
 				<label value="@{index.indexConfig.name}" />
 				<label value="@{index.indexConfig.searchCache}" />
 				<label value="@{index.indexConfig.filterCache}" />
-				<label value="@{index.indexConfig.documentCache}" />
+				<label value="@{index.indexConfig.fieldCache}" />
 				<label value="@{index.indexConfig.path}" />
-				<label value="@{index.indexConfig.remoteUrl}" />
+				<label value="@{index.indexConfig.remoteUri}" />
 				<label value="@{index.indexConfig.keyField}" />
 				<label value="@{index.indexConfig.keyMd5RegExp}" />
 			</row>
