--- a/WebContent/zul/fields.zul
+++ b/WebContent/zul/fields.zul
@@ -1,7 +1,7 @@
 <?init class="org.zkoss.zkplus.databind.AnnotateDataBinderInit" ?>
 <!--
 	License Agreement for Jaeksoft SearchLib-Community
-	Copyright (C) 2008 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft
 	http://www.jaeksoft.com
 	This file is part of Jaeksoft SearchLib-Community.
 	Jaeksoft SearchLib-Community is free software: you can
@@ -23,7 +23,6 @@
 			<column width="80px" label="stored" />
 			<column width="80px" label="termVector" />
 			<column width="100px" label="analyzer" />
-			<column width="100px" label="highlightAnalyzer" />
 		</columns>
 		<rows>
 			<row self="@{each=field}">
@@ -32,7 +31,6 @@
 				<label value="@{field.storeLabel}" />
 				<label value="@{field.termVectorLabel}" />
 				<label value="@{field.indexAnalyzer}" />
-				<label value="@{field.highlightAnalyzer}" />
 			</row>
 		</rows>
 	</grid>
