--- a/WebContent/zul/query/filters.zul
+++ b/WebContent/zul/query/filters.zul
@@ -15,29 +15,18 @@
 	copy of the GNU General Public License along with Jaeksoft SearchLib-Community.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="index"
-	use="com.jaeksoft.searchlib.web.controller.IndexController">
-	<caption image="images/jaeksoft_websearch_16.png"
-		label="Jaeksoft SearchServer" />
-	<tabbox>
-		<tabs>
-			<tab id="tab0" label="Home" selected="true" />
-			<tab id="tab1" visible="@{index.instanceValid}"
-				label="Query" />
-			<tab id="tab2" visible="@{index.instanceValid}"
-				label="Configuration" />
-		</tabs>
-		<tabpanels>
-			<tabpanel>
-				<include src="zul/home.zul" />
-			</tabpanel>
-			<tabpanel fulfill="tab1.onSelect">
-				<include src="zul/query/index.zul" />
-			</tabpanel>
-			<tabpanel fulfill="tab2.onSelect">
-				<include src="zul/configuration/index.zul" />
-			</tabpanel>
-		</tabpanels>
-	</tabbox>
-
+<window id="filters"
+	use="com.jaeksoft.searchlib.web.controller.query.FiltersController">
+	<grid model="@{filters.request.filterList.toArray}"
+		rowRenderer="@{filters.filterRenderer}">
+		<columns>
+			<column label="Query string" />
+			<column label="Action" />
+		</columns>
+		<foot>
+			<footer span="2">
+				<button label="add filter" forward="onFilterAdd" />
+			</footer>
+		</foot>
+	</grid>
 </window>
