Web interface: adding query result.

--- a/WebContent/zul/query/index.zul
+++ b/WebContent/zul/query/index.zul
@@ -66,4 +66,5 @@
 	<vbox width="100%" align="center">
 		<button label="Search" forward="onSearch" />
 	</vbox>
+	<include src="zul/query/result.zul" />
 </window>
