--- a/WebContent/zul/query/index.zul
+++ b/WebContent/zul/query/index.zul
@@ -66,5 +66,5 @@
 	<vbox width="100%" align="center">
 		<button label="Search" forward="onSearch" />
 	</vbox>
-	<include src="zul/query/result.zul" />
+	<include src="zul/query/result.zul" visible="@{query.resultExists}" />
 </window>
