--- a/WebContent/zul/query/result.zul
+++ b/WebContent/zul/query/result.zul
@@ -17,7 +17,8 @@
 -->
 <window id="result"
 	use="com.jaeksoft.searchlib.web.controller.query.ResultController">
-	<panel title="Summary">
+	<panel title="Summary" visible="@{result.resultExists}"
+		collapsible="true" border="normal">
 		<panelchildren>
 			<grid>
 				<columns>
@@ -57,33 +58,81 @@
 			</grid>
 		</panelchildren>
 	</panel>
-	<panel title="Document(s)">
+	<separator />
+	<panel title="Document(s)" visible="@{result.documentFound}"
+		collapsible="true" border="normal">
 		<panelchildren>
 			<listbox model="@{result.documents}">
 				<listitem self="@{each='document'}">
 					<listcell>
 						<separator />
-						<window title="@{document.title}"
-							border="normal">
-							<hbox>
-								<tree model="@{document.returnTree}"
-									treeitemRenderer="@{result}">
-									<treecols>
-										<treecol width="30%"
-											label="Returned field(s)" />
-										<treecol label="First value" />
-									</treecols>
-								</tree>
-								<tree model="@{document.highlightTree}"
-									treeitemRenderer="@{result}">
-									<treecols>
-										<treecol width="30%"
-											label="Highlighted field(s)" />
-										<treecol label="First value" />
-									</treecols>
-								</tree>
-							</hbox>
-						</window>
+						<panel title="@{document.title}"
+							collapsible="true">
+							<panelchildren>
+								<grid>
+									<columns>
+										<column
+											width="@{document.returnPercent}" />
+										<column
+											width="@{document.highlightPercent}" />
+									</columns>
+									<rows>
+										<row valign="top">
+											<tree
+												model="@{document.returnTree}" treeitemRenderer="@{result}"
+												visible="@{document.returnValid}" width="99%">
+												<treecols>
+													<treecol width="30%"
+														label="Returned field(s)" />
+													<treecol
+														label="First value" width="69%" />
+												</treecols>
+											</tree>
+											<tree
+												model="@{document.highlightTree}"
+												treeitemRenderer="@{result}"
+												visible="@{document.highlightValid}" width="100%">
+												<treecols>
+													<treecol width="30%"
+														label="Highlighted field(s)" />
+													<treecol
+														label="First value" width="69%" />
+												</treecols>
+											</tree>
+										</row>
+									</rows>
+								</grid>
+							</panelchildren>
+						</panel>
+					</listcell>
+				</listitem>
+			</listbox>
+		</panelchildren>
+	</panel>
+	<separator />
+	<panel title="Facet(s)" collapsible="true"
+		visible="@{result.facetValid}">
+		<panelchildren>
+			<listbox model="@{result.facetList}">
+				<listitem self="@{each='facet'}">
+					<listcell>
+						<separator />
+						<panel title="@{facet.facetField.name}"
+							collapsible="true">
+							<panelchildren>
+								<listbox model="@{facet.array}"
+									fixedLayout="true">
+									<listhead>
+										<listheader align="right" />
+										<listheader />
+									</listhead>
+									<listitem self="@{each=item}">
+										<listcell label="@{item.count}" />
+										<listcell label="@{item.term}" />
+									</listitem>
+								</listbox>
+							</panelchildren>
+						</panel>
 					</listcell>
 				</listitem>
 			</listbox>
