--- a/WebContent/WEB-INF/zul/configuration/requests.zul
+++ b/WebContent/WEB-INF/zul/configuration/requests.zul
@@ -19,17 +19,27 @@
 	use="com.jaeksoft.searchlib.web.controller.ConfigurationController">
 	<grid model="@{conf.requests}">
 		<columns>
-			<column label="name" width="100px" tooltiptext="Request's name" />
-			<column label="query" width="100px" tooltiptext="Query by default" />
-			<column label="returnFields" width="100px" tooltiptext="List of returned fields" />
-			<column label="defaultOperator" width="50px" tooltiptext="Default operator. AND or OR" />
-			<column label="start" width="50px" tooltiptext="Start offset" />
-			<column label="rows" width="50px" tooltiptext="Number of rows returned" />
+			<column label="name" width="100px"
+				tooltiptext="Request's name" />
+			<column label="query" width="100px"
+				tooltiptext="Query by default" />
+			<column label="returnFields" width="100px"
+				tooltiptext="List of returned fields" />
+			<column label="defaultOperator" width="50px"
+				tooltiptext="Default operator. AND or OR" />
+			<column label="start" width="50px"
+				tooltiptext="Start offset" />
+			<column label="rows" width="50px"
+				tooltiptext="Number of rows returned" />
 			<column label="phraseSlop" width="50px" />
-			<column label="lang" width="50px" tooltiptext="Langage of the query" />
-			<column label="highlightFields" width="50px" tooltiptext="List of highlighted fields" />
-			<column label="facetFields" width="50px" tooltiptext="List of faceted fields" />
-			<column label="filterList" width="80px" tooltiptext="List of filters applied to the request" />
+			<column label="lang" width="50px"
+				tooltiptext="Langage of the query" />
+			<column label="snippetFields" width="50px"
+				tooltiptext="List of snippet fields" />
+			<column label="facetFields" width="50px"
+				tooltiptext="List of faceted fields" />
+			<column label="filterList" width="80px"
+				tooltiptext="List of filters applied to the request" />
 		</columns>
 		<rows>
 			<row self="@{each=request}">
@@ -41,7 +51,7 @@
 				<label value="@{request.value.rows}" />
 				<label value="@{request.value.phraseSlop}" />
 				<label value="@{request.value.lang}" />
-				<label value="@{request.value.highlightFieldList}" />
+				<label value="@{request.value.snippetFieldList}" />
 				<label value="@{request.value.facetFieldList}" />
 				<listbox model="@{request.value.filterList.toArray}">
 					<listitem self="@{each=filter}">
