--- a/WebContent/WEB-INF/zul/basket/list.zul
+++ b/WebContent/WEB-INF/zul/basket/list.zul
@@ -26,7 +26,7 @@
 			<listheader label="Title" />
 		</listhead>
 		<listitem self="@{each='entry'}">
-			<listcell label="@{entry.key.key}" />
+			<listcell label="@{entry.key}" />
 			<listcell label="@{entry.value.source}" />
 			<listcell label="@{entry.value.firstTitle}" />
 		</listitem>
