--- a/WebContent/index.zul
+++ b/WebContent/index.zul
@@ -26,6 +26,8 @@
 				label="Query" />
 			<tab id="tabUpdate" visible="@{index.instanceValid}"
 				label="Update" />
+			<tab id="tabCrawler" visible="@{index.instanceValid}"
+				label="Crawler" />
 			<tab id="tabBasket" visible="@{index.instanceValid}"
 				label="Basket" />
 			<tab id="tabConfiguration" visible="@{index.instanceValid}"
@@ -42,6 +44,9 @@
 			</tabpanel>
 			<tabpanel fulfill="tabUpdate.onSelect">
 				<include src="WEB-INF/zul/update/index.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabCrawler.onSelect">
+				<include src="WEB-INF/zul/crawler/index.zul" />
 			</tabpanel>
 			<tabpanel fulfill="tabBasket.onSelect">
 				<include src="WEB-INF/zul/basket/index.zul" />
